<resources>
    <string name="app_name">ReC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="default_location">Đà Nẵng</string>

    <string-array name="my_location">
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>TP. Hồ Chí Minh</item>
        <item>Cần Thơ</item>
        <item>Hải Phòng</item>
        <item>Bình Dương</item>
        <item>Huế</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_like">LIKE</string>
    <string name="btn_save">LƯU LẠI</string>
    <string name="btn_comment">BÌNH LUẬN</string>

    <string name="add_name_hint">Full name</string>
    <string name="add_phone_hint">Phone number</string>
    <string name="add_address_hint">Address</string>
    <string name="add_add">ADD</string>
    <string name="add_cancel">CANCEL</string>
</resources>
