<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Bình luận"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edtAddNameCenter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:hint="@string/add_name_hint"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edtAddAddress"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_margin="@dimen/add_margin"
        android:background="@drawable/border"
        android:hint="@string/add_address_hint"
        android:inputType="number"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size" />

    <EditText
        android:id="@+id/edtAddPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_form.height"
        android:background="@drawable/border"
        android:layout_margin="@dimen/add_margin"
        android:hint="@string/add_phone_hint"
        android:paddingLeft="@dimen/add_padding.left"
        android:textSize="@dimen/add_text.size"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/add_margin">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_add"
            android:layout_weight="1"
            android:textSize="@dimen/add_text.size" />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_cancel"
            android:textSize="@dimen/add_text.size"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
