<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hongv.navigationdrawer.tabfragment.CenterFragmentDetail">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        android:id="@+id/center_detail_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivDetailCover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_cover.height"
                android:src="@drawable/iris"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivDetailCover"
                android:layout_alignLeft="@+id/ivDetailCover"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/tvDetailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/detail_cover.top_padding"
                    android:paddingLeft="@dimen/detail_cover.left_padding"
                    android:paddingRight="@dimen/detail_cover.right_padding"
                    android:text="Anh Ngữ IRIS"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_text_title"
                    android:textStyle="bold"
                    android:background="@color/detail_center_color" />
                <TextView
                    android:id="@+id/tvDetailSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDetailTitle"
                    android:paddingLeft="@dimen/detail_cover.left_padding"
                    android:paddingRight="@dimen/detail_cover.right_padding"
                    android:paddingBottom="@dimen/detail_cover.bottom_padding"
                    android:text="Đào tạo giao tiếp chuẩn quốc tế"
                    android:textColor="@color/white"
                    android:textSize="@dimen/detail_text_subtitle"
                    android:background="@color/detail_center_color"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/detail_center_color"
                    android:weightSum="4"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/btn_option_padding"
                        android:text="@string/btn_like"
                        android:textColor="@color/white"
                        android:textSize="@dimen/detail_text_subtitle"
                        android:textStyle="bold"
                        android:background="@color/detail_center_color"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/btn_option_padding"
                        android:text="@string/btn_save"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/detail_text_subtitle"
                        android:background="@color/detail_center_color"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/btn_option_padding"
                        android:text="@string/btn_comment"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/detail_text_subtitle"
                        android:background="@color/detail_center_color"
                        />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/center_detail_card"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/item_listview_ic_width"
                    android:layout_height="@dimen/item_listview_ic_height"
                    android:src="@drawable/ic_center_detail_cat"
                    android:paddingLeft="@dimen/item_listview_ic_paddingLeft"/>
                <TextView
                    android:id="@+id/tv_center_detail_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:text="Ngoại ngữ - Tiếng Anh"
                    android:textSize="@dimen/item_listview_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/item_listview_ic_width"
                    android:layout_height="@dimen/item_listview_ic_height"
                    android:src="@drawable/ic_center_detail_cmnt"
                    android:paddingLeft="@dimen/item_listview_ic_paddingLeft"/>
                <TextView
                    android:id="@+id/tv_center_detail_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:text="Đã có 50 bình luận về nơi này"
                    android:textSize="@dimen/item_listview_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/item_listview_ic_width"
                    android:layout_height="@dimen/item_listview_ic_height"
                    android:src="@drawable/ic_center_detail_contact"
                    android:paddingLeft="@dimen/item_listview_ic_paddingLeft"/>
                <TextView
                    android:id="@+id/tv_center_detail_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:text="Thông tin liên hệ"
                    android:textSize="@dimen/item_listview_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/item_listview_ic_width"
                    android:layout_height="@dimen/item_listview_ic_height"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:src="@android:drawable/star_big_on"/>
                <TextView
                    android:id="@+id/tv_center_detail_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:text="4.5"
                    android:textSize="@dimen/item_listview_text_size"/>
                <ImageView
                    android:layout_width="@dimen/item_listview_ic_width"
                    android:layout_height="@dimen/item_listview_ic_height"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:src="@drawable/ic_center_detail_love"/>
                <TextView
                    android:id="@+id/tv_center_detail_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/item_listview_textview_paddingLeft"
                    android:text="50"
                    android:textSize="@dimen/item_listview_text_size"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>
